Prevent scrollbars from appearing in mod column

--- a/client/src/styles/table-listing.css
+++ b/client/src/styles/table-listing.css
@@ -25,7 +25,7 @@ tbody td {
     border-collapse: collapse;
     background-color: rgba(36, 36, 36, 0.75);
     text-align: center;
-    overflow: auto;
+    overflow: hidden;
     padding: 5px;
 }
 
